  This function is now replaced by the "done" keyword (more logical).
  The "all" keyword now causes everything to be selected by default.
- The default tape driver behavior is now to write only a single EOF
  at the end of the tape. For most tape drives, this is totally            
  transparent and nothing needs to be done. For FreeBSD see below.
- FreeBSD users NOTE!!!!!
  You MUST add the following two records to your SD Device resource for
  tape drives.

     TWOEOF = yes
     Fast Forward Space File = no

- The daemon protocol has changed, you must update everything at once.
- The database level has been updated. You must either re-initialize
  your databases with:
   
    ./drop_bacula_tables
    ./make_bacula_tables

  which will delete ALL prior catalog information, or you can
  update your database with:

    ./update_bacula_tables

  Please save your old database before dropping the tables or doing
  an upgrade or you may regret it later.

- smtp has now become bsmtp -- you *must* modify your .conf files.
- console has now become bconsole.
- console.conf is now bconsole.conf
- Please don't underestimate the repercussions of the bsmtp and bconsole 
  name changes!


New directives:
- "Close on Poll = yes/no" in SD Device resource.
- "Volume Poll Interval = time-interval" in SD Device resource.
- "Two EOF = yes/no" in SD Device resource.
- "Maximum Network Buffer Size = size" in SD Device resource.
- "Maximum Network Buffer Size = size" in FD FileDaemon (or Client) resource.
- "Console" new resource in Director conf file.
     New directives: Name, Description, Password, JobACL, ClientACL,
        StorageACL, ScheduleACL, RunACL, PoolACL, CommandACL,
        FileSetACL, CatalogACL.
- "Max Run Time = duration" in Director Job resource.
- "Max Wait Time = duration" in Director Job resource (not fully implemented).
- "JobDefs = name-of-resource" in Director Job resource.
- "Jobdefs" new resource in Director. Same directives as for a Job.